[gd_scene load_steps=4 format=3 uid="uid://cjaiafcyeycpf"]

[ext_resource type="Texture2D" uid="uid://b1nj4weoucqgn" path="res://graphics/player/player.png" id="1_3wkxg"]
[ext_resource type="Script" path="res://scenes/player/Player.gd" id="1_tamkh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0oh8s"]
radius = 70.0643

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_tamkh")

[node name="PlayerImage" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_3wkxg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-30, -2)
shape = SubResource("CircleShape2D_0oh8s")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(92, 27)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(94, 19)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(93, 12)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
